--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="container d-flex h-100 align-items-center">
                 <div class="mx-auto text-center">
                     <h1 class="mx-auto my-0 text-uppercase"><span style="color: #ff4040">S</span><span style="color: #4073ff">S</span>uper Core<span style="color: #4073ff">S</span><span style="color: #ff4040">S</span></h1>
-                    <h2 class="text-white-50 mx-auto mt-2 mb-5">Pintura eletrostática.</h2>
+                    <h2 class="text-white-50 mx-auto mt-2 mb-5">Pintura eletrostática</h2>
                     <a class="btn btn-primary js-scroll-trigger" href="#about">Navegar</a>
                 </div>
             </div>
